criacao da 'section bicicletas', reposividade corrigida de outras sections

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,3 +3,7 @@
 @import "./scss/_tipografia";
 
 @import "../components/header/header";
+@import "./scss/home/intro";
+@import "../components/_botoes";
+
+@import "./scss/home/bicicletas";
