--- a/src/styles/scss/__tipografia.scss
+++ b/src/styles/scss/__tipografia.scss
@@ -1,8 +1,36 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
 
 .text-nav {
   font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-size: 1.125rem;
   line-height: 2;
+}
+
+.text-h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.125;
+}
+
+.text-h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 1.125;
+}
+
+.text-p-med {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+.text-p-s {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.33;
 }
