--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -24,6 +24,34 @@ li, a {
   font-weight: 500;
   font-size: 1.125rem;
   line-height: 2;
+}
+
+.text-h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 1.125;
+}
+
+.text-h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 1.125;
+}
+
+.text-p-med {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.5;
+}
+
+.text-p-s {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1.125rem;
+  line-height: 1.33;
 }
 
 .header-intro-bg {
@@ -66,5 +94,157 @@ img {
   }
   ul li:hover {
     background-color: rgba(255, 255, 255, 0.5);
+  }
+}
+.intro {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: end;
+  gap: 40px;
+}
+
+.container {
+  height: 100%;
+  box-shadow: inset 0 -80px #ffffff;
+  margin-bottom: 120px;
+}
+
+.intro-texto {
+  padding-bottom: 200px;
+}
+
+.intro-texto h1 {
+  color: #ffffff;
+  margin-bottom: 32px;
+}
+
+.intro-texto span {
+  color: #ffbb00;
+}
+
+.intro-texto p {
+  color: #b2b2b2;
+  margin-bottom: 32px;
+}
+
+.intro img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    box-shadow: none;
+    padding-bottom: 64px;
+  }
+  .intro-texto {
+    padding: 24px;
+  }
+  .intro-texto h1 {
+    width: 600px;
+  }
+  .intro-texto p {
+    width: 500px;
+  }
+  .intro img {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    box-shadow: none;
+    padding-bottom: 64px;
+  }
+  .intro-texto h1 {
+    font-size: 2rem;
+    line-height: 1.125;
+  }
+  .intro-texto p {
+    font-size: 1.4rem;
+    line-height: 1.25;
+  }
+}
+.btn-primario {
+  padding: 16px 32px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  background: linear-gradient(180deg, #ffbf00 0%, #f2a50c 100%);
+  color: #332200;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 2;
+  text-transform: uppercase;
+}
+
+.bicicletas {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.bicicletas span {
+  color: #ffbb00;
+}
+
+.bicicletas-modelos {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+}
+
+.modelo {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.modelo img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.modelo-texto {
+  padding: 12px 36px;
+}
+
+.modelo-texto h2 {
+  position: relative;
+  margin-bottom: 8px;
+}
+
+.modelo-texto p {
+  margin-bottom: 120px;
+}
+
+.modelo-texto h2::before {
+  content: "";
+  width: 12px;
+  height: 8px;
+  background: linear-gradient(180deg, #ffbf00 0%, #f2a50c 100%);
+  position: absolute;
+  top: 12px;
+  left: -24px;
+  z-index: -1;
+}
+
+@media (max-width: 700px) {
+  .bicicletas h1 {
+    padding-left: 12px;
+  }
+  .bicicletas-modelos {
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+  .bicicletas-modelos::-webkit-scrollbar {
+    border-radius: 64px;
+    width: 8px; /* define a largura da barra */
+    background: linear-gradient(180deg, #ffbf00 0%, #f2a50c 100%); /* define a cor de fundo */
+  }
+  .modelo {
+    width: 300px;
   }
 }/*# sourceMappingURL=style.css.map */
