--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -51,7 +51,7 @@ li, a {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 1.125rem;
-  line-height: 1.33;
+  line-height: 1.5;
 }
 
 .header-intro-bg {
@@ -232,7 +232,7 @@ img {
 }
 
 @media (max-width: 700px) {
-  .bicicletas h1 {
+  .bicicletas h1, .bicicletas-modelos {
     padding-left: 12px;
   }
   .bicicletas-modelos {
@@ -246,5 +246,113 @@ img {
   }
   .modelo {
     width: 300px;
+  }
+  .modelo-texto p {
+    margin-bottom: 8px;
+  }
+}
+.qualidades {
+  background-color: #111111;
+  box-shadow: inset 0 80px #ffffff, inset 0 -80px #ffffff;
+}
+
+.containter-qualidades {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: end;
+  gap: 40px;
+}
+
+.qualidades-texto {
+  padding-bottom: 140px;
+}
+
+.qualidades-texto p {
+  padding-top: 16px;
+  color: #b2b2b2;
+}
+
+.qualidades-texto h1 {
+  padding-top: 20px;
+  color: #ffffff;
+}
+
+.qualidades-texto span {
+  color: #ffbb00;
+}
+
+.modelo-titulo {
+  color: #ffbb00 !important;
+  text-transform: uppercase;
+  text-decoration: underline;
+}
+
+.qualidades-texto-tipo {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+}
+
+.tipo-modelo {
+  padding-top: 80px;
+  width: 300px;
+}
+
+.tipo-modelo h4 {
+  color: #ffffff;
+  position: relative;
+}
+
+.eletrico::before {
+  content: "";
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("../../../../src/assets/icons/eletrica.svg") no-repeat;
+  position: absolute;
+  top: -48px;
+}
+
+.rastreador::before {
+  content: "";
+  display: block;
+  width: 32px;
+  height: 32px;
+  background: url("../../../../src/assets/icons/rastreador.svg") no-repeat;
+  position: absolute;
+  top: -48px;
+}
+
+.containter-qualidades-arte img {
+  height: 1000px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media (max-width: 700px) {
+  .qualidades {
+    box-shadow: none;
+    margin-top: 64px;
+  }
+  .containter-qualidades {
+    grid-template-columns: 1fr;
+    padding-left: 12px;
+  }
+  .qualidades-texto {
+    padding: 40px 0;
+  }
+  .qualidades-texto h1 {
+    font-size: 2rem;
+  }
+  .qualidades-texto p {
+    font-size: 1.25rem;
+  }
+  .qualidades-texto-tipo {
+    grid-template-columns: 1fr;
+  }
+  .containter-qualidades-arte img {
+    display: none;
   }
 }/*# sourceMappingURL=style.css.map */
