--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,7 @@ body {
   width: 100%;
   height: 100vh;
   border: none;
+  overflow-x: hidden;
 }
 
 ul {
@@ -343,9 +344,6 @@ img {
   .qualidades-texto {
     padding: 40px 0;
   }
-  .qualidades-texto h1 {
-    font-size: 2rem;
-  }
   .qualidades-texto p {
     font-size: 1.25rem;
   }
@@ -354,5 +352,48 @@ img {
   }
   .containter-qualidades-arte img {
     display: none;
+  }
+}
+.parceiros {
+  padding-top: 120px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.parceiros span {
+  color: #ffbb00;
+}
+
+.parceiros-quadro {
+  padding-top: 60px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.quadro-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+  border-bottom: 2px solid #dedede;
+  border-right: 2px solid #dedede;
+}
+
+.no-border-bottom {
+  border-bottom: none;
+}
+
+.no-border-right {
+  border-right: none;
+}
+
+.quadro-item img {
+  max-width: 100%;
+  height: auto;
+}
+
+@media (max-width: 700px) {
+  .parceiros h1 {
+    padding-left: 12px;
   }
 }/*# sourceMappingURL=style.css.map */
