section feedback, seguro. Automacoes no codigo

--- a/src/styles/scss/home/_parceiros.scss
+++ b/src/styles/scss/home/_parceiros.scss
@@ -2,10 +2,7 @@
   padding-top: 120px;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.parceiros span {
-  color: $p1;
+  color: $c12;
 }
 
 .parceiros-quadro {
