--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,5 @@
 @import "./scss/home/bicicletas";
 @import "./scss/home/qualidades";
 @import "./scss/home/parceiros";
+@import "./scss/home/feedback";
+@import "./scss/home/seguro";
