--- a/src/components/__botoes.scss
+++ b/src/components/__botoes.scss
@@ -11,3 +11,17 @@
   line-height: 2;
   text-transform: uppercase;
 }
+
+.btn-secundario {
+  padding: 16px 32px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  background: $c10;
+  color: $c4;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 2;
+  text-transform: uppercase;
+}
