--- a/src/styles/scss/__tipografia.scss
+++ b/src/styles/scss/__tipografia.scss
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap');
+
 
 .text-nav {
   font-family: "Poppins", sans-serif;
@@ -12,6 +13,9 @@
   font-weight: 700;
   font-size: 4rem;
   line-height: 1.125;
+}
+.text-h1-span {
+  color: $p1;
 }
 
 .text-h2 {
