--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -32,6 +33,10 @@ li, a {
   font-weight: 700;
   font-size: 4rem;
   line-height: 1.125;
+}
+
+.text-h1-span {
+  color: #ffbb00;
 }
 
 .text-h2 {
@@ -121,10 +126,6 @@ img {
   margin-bottom: 32px;
 }
 
-.intro-texto span {
-  color: #ffbb00;
-}
-
 .intro-texto p {
   color: #b2b2b2;
   margin-bottom: 32px;
@@ -181,13 +182,23 @@ img {
   text-transform: uppercase;
 }
 
+.btn-secundario {
+  padding: 16px 32px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  background: #2e2e2e;
+  color: #cccccc;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 2;
+  text-transform: uppercase;
+}
+
 .bicicletas {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.bicicletas span {
-  color: #ffbb00;
 }
 
 .bicicletas-modelos {
@@ -280,10 +291,6 @@ img {
   color: #ffffff;
 }
 
-.qualidades-texto span {
-  color: #ffbb00;
-}
-
 .modelo-titulo {
   color: #ffbb00 !important;
   text-transform: uppercase;
@@ -358,10 +365,7 @@ img {
   padding-top: 120px;
   max-width: 1200px;
   margin: 0 auto;
-}
-
-.parceiros span {
-  color: #ffbb00;
+  color: #000000;
 }
 
 .parceiros-quadro {
@@ -396,4 +400,125 @@ img {
   .parceiros h1 {
     padding-left: 12px;
   }
+}
+.feedback {
+  margin-top: 120px;
+  display: flex;
+  grid-template-columns: 1fr 1fr;
+  align-items: end;
+  background-color: #ffbb00;
+}
+
+.feedback img {
+  width: 50%;
+  padding-left: 0;
+}
+
+.feedback-texto {
+  max-width: 700px;
+  margin-right: 0;
+  padding: 80px 80px;
+}
+
+.depoimento {
+  font-family: "Merriweather", serif;
+  font-style: italic;
+  font-size: 2.25rem;
+  padding-bottom: 32px;
+  position: relative;
+}
+
+.depoimento::before {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 35px;
+  background: url("../../../../src/assets/dec/“.svg");
+  position: absolute;
+  top: -20px;
+  left: -40px;
+}
+
+.depoimento::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 35px;
+  background: url("../../../../src/assets/dec/”.svg");
+  position: absolute;
+  top: 200px;
+  left: 500px;
+}
+
+.seguro {
+  background-color: #111111;
+  padding: 60px 0;
+}
+
+.container-seguro {
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #ffffff;
+}
+
+.container-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  align-items: center;
+  padding-top: 60px;
+}
+
+.seguro-card {
+  background-color: #000000;
+  border-radius: 5px;
+  padding: 32px 64px;
+}
+
+.seguro-card-titulo {
+  display: flex;
+  justify-content: space-between;
+}
+
+.seguro-card-titulo h2 {
+  color: #9c9c9c;
+}
+
+.ouro {
+  color: #ffbb00 !important;
+}
+
+.preco {
+  color: #ffffff !important;
+  position: relative;
+}
+
+.preco::before {
+  content: "mensal";
+  font-family: "Poppins", sans-serif;
+  font-size: 0.875rem;
+  color: #9c9c9c !important;
+  position: absolute;
+  top: 36px;
+  left: 46px;
+}
+
+.seguro-card ul {
+  margin: 32px 0;
+}
+
+.seguro-card ul li {
+  padding: 20px 0;
+  position: relative;
+}
+
+.seguro-card ul li::before {
+  content: "";
+  display: block;
+  width: 13px;
+  height: 9px;
+  background: url("../../../../src/assets/icons/lista.svg");
+  position: absolute;
+  top: 28px;
+  left: -24px;
 }/*# sourceMappingURL=style.css.map */
