correcao na responsividade, footer criado

--- a/src/styles/scss/__normalize.scss
+++ b/src/styles/scss/__normalize.scss
@@ -5,16 +5,22 @@
 }
 
 body {
-  width: 100%;
-  height: 100vh;
   border: none;  
   overflow-x: hidden;
 }
 
 ul {
+  margin: 0;
+  padding: 0;
   list-style: none;
 }
 
-li, a {
+a {
   text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
