--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -9,34 +9,43 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 32px 0;
+  padding: 20px;
 }
 
-nav ul {
+.header-menu {
   display: flex;
+  flex-wrap: wrap;
   gap: 40px;
 }
 
-ul li {
+.header-menu a {
   color: $c0;
-  padding: 8px 12px;
+  padding: 16px 0;
 }
 
-img {
-  padding-left: 12px;
-  width: 100%;
+@media (max-width: 800px) {
+  .header {
+    gap: 20px;
+  }  
+  .header-menu {
+    gap: 20px;
+  }
+  .header-menu a {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+  .header-menu a:hover {
+    background-color: rgba(255, 255, 255, 0.5);
+  }
 }
 
 @media (max-width: 600px) {
-  .header {
-    flex-direction: column;
-    gap: 40px;
+  .header-menu {
+    gap: 12px;
   }
-  ul li {
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 4px;
-  }
-  ul li:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+  .header-menu a {
+    padding: 8px 12px;
+    font-size: 0.875rem;
   }
 }
