--- a/src/styles/scss/home/_bicicletas.scss
+++ b/src/styles/scss/home/_bicicletas.scss
@@ -45,9 +45,13 @@
   z-index: -1;
 }
 
-@media (max-width: 700px) {
-  .bicicletas h1, .bicicletas-modelos {
-    padding-left: 12px;
+@media (max-width: 800px) {
+  .bicicletas h1,
+  .bicicletas-modelos {
+    padding-left: 24px;
+  }
+  .bicicletas h1 {    
+    font-size: 2rem;
   }
   .bicicletas-modelos {
     overflow-x: scroll;
@@ -60,7 +64,7 @@
   }
   .modelo {
     width: 300px;
-  }
+  }  
   .modelo-texto p {
     margin-bottom: 8px;
   }
