--- a/src/styles/scss/home/_parceiros.scss
+++ b/src/styles/scss/home/_parceiros.scss
@@ -32,8 +32,9 @@
   height: auto;
 }
 
-@media (max-width: 700px) { 
+@media (max-width: 800px) { 
   .parceiros h1 {
-    padding-left: 12px;
+    padding: 24px;
+    font-size: 2rem;
   }    
 }
