--- a/src/styles/scss/home/_qualidades.scss
+++ b/src/styles/scss/home/_qualidades.scss
@@ -71,25 +71,36 @@
   object-fit: cover;
 }
 
-@media (max-width: 700px) {
+
+@media (max-width: 900px) {
   .qualidades {
+    margin-top: 32px;
+    background-color: $c11;
     box-shadow: none;
-    margin-top: 64px;
   }
   .containter-qualidades {
+    padding: 32px 24px;
     grid-template-columns: 1fr;
-    padding-left: 12px;
   }
   .qualidades-texto {
-    padding: 40px 0;
+    padding-bottom: 40px;
+  }
+  .qualidades-texto h1 {
+    font-size: 2rem;
   }
   .qualidades-texto p {
     font-size: 1.25rem;
+    max-width: 740px;
   }
-  .qualidades-texto-tipo {
-    grid-template-columns: 1fr;
-  }
-  .containter-qualidades-arte img {
+  .containter-qualidades-arte > img {
     display: none;
   }
+}
+
+@media (max-width: 700px) {
+  .qualidades-texto-tipo {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+  }  
 }
