pagina bicicleta finalizada

--- a/src/styles/scss/home/_intro.scss
+++ b/src/styles/scss/home/_intro.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  align-items: end;
+  align-items: flex-end;
   gap: 40px;
 }
 
