--- a/src/styles/termos.css
+++ b/src/styles/termos.css
@@ -143,124 +143,28 @@ img {
     font-size: 0.875rem;
   }
 }
-.bicicletas-texto-bg {
-  background-color: #111111;
-}
-
-.bicicletas-texto,
-.bicicleta-modelo {
+.termos-container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 60px 20px;
+  padding: 32px 24px;
+  text-align: justify;
 }
 
-.bicicletas-texto h1 {
-  color: #ffffff;
-}
-
-p {
-  color: #595959;
-}
-
-.bicicleta-modelo {
-  display: grid;
-  gap: 40px;
-  padding: 60px 0;
-  grid-template-columns: 1fr 1fr;
-}
-
-.modelo-imagem {
-  position: relative;
-}
-
-.modelo-imagem span {
-  display: inline-block;
-  position: absolute;
-  background: #000000;
-  color: #ffffff;
-  font-weight: 700;
-  padding: 8px 16px 8px 8px;
-  border-radius: 4px 0 0 4px;
-  top: 20px;
-  right: 0;
-}
-
-.modelo-conteudo {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-content: start;
-}
-
-.modelo-conteudo h2,
-.modelo-conteudo p {
-  grid-column: 1/-1;
-}
-
-.modelo-conteudo h2 {
-  margin: 20px 0;
-  position: relative;
-}
-
-.modelo-conteudo h2::before {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 8px;
-  background: linear-gradient(180deg, #ffbf00 0%, #f2a50c 100%);
-  position: absolute;
-  top: -20px;
-}
-
-.modelo-conteudo p,
-.modelo-conteudo li {
-  color: #595959;
-}
-
-.modelo-conteudo p {
-  max-width: 52ch;
+.termos-container h2,
+.termos-container p {
   margin-bottom: 32px;
 }
 
-.modelo-conteudo li {
-  display: flex;
-  padding-bottom: 16px;
-  gap: 8px;
-}
-
-.modelo-conteudo a {
-  place-self: end;
-  margin-bottom: 12px;
-}
-
-.bicicleta-bg {
-  background: linear-gradient(to right, #ffffff 30%, #111111 0%);
-}
-
-.bicicleta-bg h2 {
-  color: #ffffff;
-}
-
-.bicicleta-bg p,
-.bicicleta-bg li {
-  color: #b2b2b2;
-}
-
 @media (max-width: 800px) {
-  .bicicleta-bg {
-    background: #111111;
+  .bicicletas-texto h1 {
+    font-size: 2rem;
   }
-  .bicicleta-modelo {
-    grid-template-columns: 1fr;
-    gap: 20px;
-    padding: 40px 20px;
+  .bicicletas-texto p {
+    font-size: 1.25rem;
+    margin-bottom: 20px;
   }
-}
-@media (max-width: 600px) {
-  .modelo-conteudo {
-    grid-template-columns: 1fr;
-  }
-  .modelo-conteudo a {
-    place-self: start;
+  .termos-container {
+    text-align: left;
   }
 }
 .footer {
@@ -335,4 +239,4 @@ a,
   .copy {
     margin-top: 0px;
   }
-}/*# sourceMappingURL=bicicletas.css.map */
+}/*# sourceMappingURL=termos.css.map */
