--- a/src/styles/scss/__tipografia.scss
+++ b/src/styles/scss/__tipografia.scss
@@ -38,3 +38,24 @@
   font-size: 1.125rem;
   line-height: 1.5;
 }
+
+.text-p-s1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.text-p-s2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: .875rem;
+  line-height: 1.5;
+}
+
+.text-p-s3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: .75rem;
+  line-height: 1.5;
+}
