--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -66,6 +66,27 @@ img {
   line-height: 1.5;
 }
 
+.text-p-s1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.text-p-s2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+
+.text-p-s3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.5;
+}
+
 .header-intro-bg {
   background-color: #000000;
 }
