--- a/src/styles/termos.css
+++ b/src/styles/termos.css
@@ -65,6 +65,27 @@ img {
   line-height: 1.5;
 }
 
+.text-p-s1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.5;
+}
+
+.text-p-s2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.5;
+}
+
+.text-p-s3 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1.5;
+}
+
 .btn-primario {
   padding: 16px 32px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
