responsividade bicicleta alternativa

--- a/src/styles/bikes.css
+++ b/src/styles/bikes.css
@@ -376,6 +376,19 @@ img {
   z-index: -1;
 }
 
+@media (max-width: 400px) {
+  .bicicleta-alternativa {
+    padding: 0 24px;
+  }
+  .bicicleta-alternativa h1 {
+    font-size: 2rem;
+    padding-top: 20px;
+  }
+  .bicicleta-alternativa-container {
+    grid-template-columns: 1fr;
+    margin-top: 30px;
+  }
+}
 .footer {
   background-color: #000000;
 }
