--- a/src/styles/scss/bicicletas/bicicletas-externo/_bike-alternativa.scss
+++ b/src/styles/scss/bicicletas/bicicletas-externo/_bike-alternativa.scss
@@ -25,7 +25,6 @@
   padding: 12px 36px;
 }
 
-
 .modelo-texto h2 {
   position: relative;
   margin-bottom: 8px;
@@ -39,4 +38,18 @@
   top: 12px;
   left: -24px;
   z-index: -1;
+}
+
+@media (max-width: 400px) {
+  .bicicleta-alternativa{
+    padding: 0 24px;
+  }
+  .bicicleta-alternativa h1 {
+    font-size: 2rem;
+    padding-top: 20px;
+  } 
+  .bicicleta-alternativa-container {
+    grid-template-columns: 1fr;
+    margin-top: 30px;
+  }    
 }
