--- a/src/styles/bikes.scss
+++ b/src/styles/bikes.scss
@@ -7,4 +7,5 @@
 @import "../components/header";
 @import "../styles/scss/bicicletas/bicicletas-externo/bike-principal";
 @import "../styles/scss/bicicletas/bicicletas-externo/bike-alternativa";
+@import "../styles/scss/bicicletas/bicicletas-externo/bike-propaganda";
 @import "../components/footer";
