--- a/src/styles/orcamento.css
+++ b/src/styles/orcamento.css
@@ -137,126 +137,199 @@ img {
     font-size: 0.875rem;
   }
 }
-.bicicletas-texto-bg {
-  background-color: #111111;
+.efeito-bg {
+  background: linear-gradient(to bottom, #111111 50%, #ededed 0%);
 }
 
-.bicicletas-texto,
-.bicicleta-modelo {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 60px 20px;
-}
-
-.bicicletas-texto h1 {
+.orcamento {
   color: #ffffff;
 }
 
-p {
-  color: #595959;
-}
-
-.bicicleta-modelo {
-  display: grid;
-  gap: 40px;
-  padding: 60px 0;
-  grid-template-columns: 1fr 1fr;
-}
-
-.modelo-imagem {
-  position: relative;
-}
-
-.modelo-imagem span {
-  display: inline-block;
-  position: absolute;
-  background: #000000;
-  color: #ffffff;
-  font-weight: 700;
-  padding: 8px 16px 8px 8px;
-  border-radius: 4px 0 0 4px;
-  top: 20px;
-  right: 0;
-}
-
-.modelo-conteudo {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-content: start;
-}
-
-.modelo-conteudo h2,
-.modelo-conteudo p {
-  grid-column: 1/-1;
-}
-
-.modelo-conteudo h2 {
-  margin: 20px 0;
-  position: relative;
-}
-
-.modelo-conteudo h2::before {
-  content: "";
-  display: block;
-  width: 12px;
-  height: 8px;
-  background: linear-gradient(180deg, #ffbf00 0%, #f2a50c 100%);
-  position: absolute;
-  top: -20px;
-}
-
-.modelo-conteudo p,
-.modelo-conteudo li {
-  color: #595959;
-}
-
-.modelo-conteudo p {
-  max-width: 52ch;
-  margin-bottom: 32px;
-}
-
-.modelo-conteudo li {
-  display: flex;
-  padding-bottom: 16px;
-  gap: 8px;
-}
-
-.modelo-conteudo a {
-  place-self: end;
-  margin-bottom: 12px;
-}
-
-.bicicleta-bg {
-  background: linear-gradient(to right, #ffffff 30%, #111111 0%);
-}
-
-.bicicleta-bg h2 {
-  color: #ffffff;
-}
-
-.bicicleta-bg p,
-.bicicleta-bg li {
+.orcamento p {
   color: #b2b2b2;
 }
 
-@media (max-width: 800px) {
-  .bicicleta-bg {
-    background: #111111;
-  }
-  .bicicleta-modelo {
+.orcamento-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 60px 24px;
+}
+
+.orcamento-container-texto {
+  margin-bottom: 0;
+}
+
+.quadro {
+  padding-bottom: 120px;
+}
+
+.quadro-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px 24px;
+  display: grid;
+  grid-template-columns: 5fr 7fr;
+}
+
+.quadro-container-1 {
+  padding: 60px 60px 392px 48px;
+  background: #000000;
+  color: #ffffff;
+  display: grid;
+  grid-column: 1fr 1fr;
+}
+
+.servico p,
+.servico span,
+.escolha p {
+  font-family: "Poppins", sans-serif;
+}
+
+.servico p,
+.escolha p {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.servico p::before,
+.escolha p::before {
+  content: "";
+  display: block;
+  width: 4px;
+  height: 12px;
+  background: #ffbb00;
+  position: absolute;
+  top: 4px;
+  left: -8px;
+}
+
+.servico div {
+  margin-bottom: 40px;
+}
+
+.servico span {
+  margin-right: 20px;
+  background: #2e2e2e;
+  color: #cccccc;
+  padding: 12px 32px 12px 8px;
+  border-radius: 4px;
+}
+
+.quadro-container-2 {
+  padding: 60px 40px 40px 48px;
+  background: #ffffff;
+  color: #000000;
+}
+
+.quadro-container-2 form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.quadro-container-2 form input {
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  background: #f7f7f7;
+  padding-left: 8px;
+  border: 2px solid #ededed;
+}
+
+.grid-all {
+  grid-column: 1/3;
+}
+
+.quadro-container-2 p,
+.termos {
+  font-family: "Poppins", sans-serif;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.quadro-container-2 p::before {
+  content: "";
+  display: block;
+  width: 4px;
+  height: 12px;
+  background: #ffbb00;
+  position: absolute;
+  top: 4px;
+  left: -8px;
+}
+
+.termos {
+  display: flex;
+  align-items: center;
+}
+
+.termos input {
+  height: initial !important;
+  margin-right: 10px;
+}
+
+.termos span {
+  text-decoration: underline;
+}
+
+@media (max-width: 1000px) {
+  .quadro-container {
     grid-template-columns: 1fr;
-    gap: 20px;
-    padding: 40px 20px;
+  }
+  .quadro-container-1 {
+    padding: 60px 60px 60px 48px;
   }
 }
-@media (max-width: 600px) {
-  .modelo-conteudo {
-    grid-template-columns: 1fr;
+@media (max-width: 500px) {
+  .orcamento p {
+    font-size: 1rem;
+    margin-bottom: 12px;
   }
-  .modelo-conteudo a {
-    place-self: start;
+  .orcamento h1 {
+    font-size: 2rem;
+  }
+  .servico div {
+    display: flex;
   }
 }
+.escolha div {
+  background: #2e2e2e;
+  color: #cccccc;
+  padding: 4px;
+  border-radius: 4px;
+}
+
+.card {
+  margin-bottom: 20px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.div-container {
+  display: grid !important;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px;
+}
+
+.div-container li {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+
+.div-container li img {
+  width: 24px;
+}
+
+.hidden {
+  display: none;
+}
+
 .footer {
   background-color: #000000;
 }
@@ -329,4 +402,4 @@ a,
   .copy {
     margin-top: 0px;
   }
-}/*# sourceMappingURL=bicicletas.css.map */
+}/*# sourceMappingURL=orcamento.css.map */
