--- a/src/styles/contato.css
+++ b/src/styles/contato.css
@@ -1,3 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:ital,wght@0,500;0,700;1,500&family=Roboto:ital,wght@0,500;0,700;1,500&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  border: none;
+  border-style: none;
+  overflow-x: hidden;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 4px;
+}
+
+.text-nav {
+  font: 500 1.125rem/2 "Poppins", sans-serif;
+}
+
+.text-h1 {
+  font: 700 4rem/1.125 "Poppins", sans-serif;
+}
+
+.text-h1-span {
+  color: #ffbb00;
+}
+
+.text-h2 {
+  font: 700 2rem/1.125 "Poppins", sans-serif;
+}
+
+.text-p-med {
+  font: 500 1.5rem/1.5 "Roboto", sans-serif;
+}
+
+.text-p-s {
+  font: 500 1.125rem/1.5 "Roboto", sans-serif;
+}
+
+.text-p-s1 {
+  font: 500 1rem/1.5 "Roboto", sans-serif;
+}
+
+.text-p-s2 {
+  font: 500 0.875rem/1.5 "Roboto", sans-serif;
+}
+
+.text-p-s3 {
+  font: 500 0.75rem/1.5 "Roboto", sans-serif;
+}
+
 .mensagem textarea {
   display: block;
   width: 100%;
