correcoes de links externos

--- a/src/styles/scss/seguros/_main.scss
+++ b/src/styles/scss/seguros/_main.scss
@@ -42,7 +42,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets/icons/eletrica.svg") no-repeat;
+  background: url("../assets/icons/eletrica.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -51,7 +51,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets/icons/carbono.svg") no-repeat;
+  background: url("../assets/icons/carbono.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -60,7 +60,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/sustentavel.svg") no-repeat;
+  background: url("../assets/icons/sustentavel.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -69,7 +69,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/rastreador.svg") no-repeat;
+  background: url("../assets/icons/rastreador.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -78,7 +78,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/seguro.svg") no-repeat;
+  background: url("../assets/icons/seguro.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -87,7 +87,7 @@
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/velocidade.svg") no-repeat;
+  background: url("../assets/icons/velocidade.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
