--- a/src/styles/seguros.css
+++ b/src/styles/seguros.css
@@ -110,7 +110,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets/icons/eletrica.svg") no-repeat;
+  background: url("../assets/icons/eletrica.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -120,7 +120,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets/icons/carbono.svg") no-repeat;
+  background: url("../assets/icons/carbono.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -130,7 +130,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/sustentavel.svg") no-repeat;
+  background: url("../assets/icons/sustentavel.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -140,7 +140,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/rastreador.svg") no-repeat;
+  background: url("../assets/icons/rastreador.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -150,7 +150,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/seguro.svg") no-repeat;
+  background: url("../assets/icons/seguro.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
@@ -160,7 +160,7 @@ img {
   display: block;
   width: 32px;
   height: 32px;
-  background: url("../../../../src/assets//icons/velocidade.svg") no-repeat;
+  background: url("../assets/icons/velocidade.svg") no-repeat;
   position: absolute;
   top: -40px;
 }
