--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -9,7 +9,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;  
+  padding: 20px;
 }
 
 .header-menu {
@@ -21,22 +21,40 @@
 .header-menu a {
   color: $c0;
   padding: 16px 0;
+  position: relative;
+}
+.header-menu a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  background-color: $c2;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
+  width: 100%;
 }
 
 @media (max-width: 800px) {
   .header {
     gap: 20px;
-  }  
+  }
   .header-menu {
     gap: 20px;
   }
   .header-menu a {
-    background-color: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.1);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.5);
+  }
+  .header-menu a:hover::after {
+    display: none;
   }
 }
 
