--- a/src/styles/termos.css
+++ b/src/styles/termos.css
@@ -110,6 +110,23 @@ img {
 .header-menu a {
   color: #ffffff;
   padding: 16px 0;
+  position: relative;
+}
+
+.header-menu a::after {
+  content: "";
+  display: block;
+  height: 2px;
+  width: 0px;
+  background-color: #ededed;
+  margin-top: 4px;
+  transition: 0.3s;
+  position: absolute;
+}
+
+.header-menu a:hover::after,
+.header-menu a.ativo::after {
+  width: 100%;
 }
 
 @media (max-width: 800px) {
@@ -120,12 +137,15 @@ img {
     gap: 20px;
   }
   .header-menu a {
-    background-color: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.1);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover {
-    background-color: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.5);
+  }
+  .header-menu a:hover::after {
+    display: none;
   }
 }
 @media (max-width: 600px) {
