--- a/src/styles/seguros.css
+++ b/src/styles/seguros.css
@@ -169,7 +169,7 @@ img {
   background: #ffffff;
 }
 
-.perguntas {
+.faq-lista {
   margin-top: 88px;
   margin-bottom: 120px;
 }
@@ -179,6 +179,10 @@ img {
   border-radius: 4px;
   transition: 0.4s;
   cursor: pointer;
+}
+
+.questao:nth-child(2n+1) {
+  background: #f7f7f7;
 }
 
 .pergunta p {
@@ -195,23 +199,18 @@ img {
   background: #ffbb00;
   position: absolute;
   left: 12px;
-  top: 12px;
+  top: 8px;
 }
 
 .resposta {
   padding: 0 32px;
-  max-height: 0;
-  overflow: hidden;
-  transition: 0.2s ease-out;
+  display: none;
   color: #404040;
 }
 
-.questao:nth-child(2n+1) {
-  background: #f7f7f7;
-}
-
 @media (max-width: 800px) {
-  .vantagens h1, .faq h1 {
+  .vantagens h1,
+  .faq h1 {
     font-size: 2rem;
     padding-left: 24px;
   }
@@ -219,5 +218,20 @@ img {
     grid-template-columns: 1fr;
     gap: 20px;
     padding: 0 24px;
+  }
+}
+.resposta.ativo {
+  display: block;
+  animation: slideDown 0.5 forwards;
+}
+
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+  to {
+    max-height: 300px;
+    opacity: 1;
   }
 }/*# sourceMappingURL=seguros.css.map */
