adiocionando js a pagina de orcamento

--- a/src/styles/orcamento.css
+++ b/src/styles/orcamento.css
@@ -312,42 +312,39 @@ img {
     display: flex;
   }
 }
-.escolha div {
+.escolha-item {
   background: #2e2e2e;
   color: #cccccc;
-  padding: 4px;
+  padding: 12px;
   border-radius: 4px;
-}
-
-.card {
   margin-bottom: 20px;
+  cursor: pointer;
 }
 
-.info {
+.escolha-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.div-container {
-  display: grid !important;
-  grid-template-columns: 1fr 1fr;
-  gap: 12px;
+.escolha-item:hover {
+  font-weight: 700;
+  background: #404040;
 }
 
-.div-container li {
+.escolha-conteudo {
+  padding-top: 20px;
+  grid-template-columns: 1fr 1fr;
+  gap: 12px;
+  align-items: center;
+  display: none;
+}
+
+.escolha-conteudo li {
   display: flex;
   align-items: center;
   gap: 8px;
   margin-bottom: 8px;
-}
-
-.div-container li img {
-  width: 24px;
-}
-
-.hidden {
-  display: none;
 }
 
 .footer {
