Teste de repositorio

--- a/src/styles/scss/home/_seguro.scss
+++ b/src/styles/scss/home/_seguro.scss
@@ -63,7 +63,7 @@
   display: block;
   width: 13px;
   height: 9px;
-  background: url("../../../../src/assets/icons/lista.svg");
+  background: url("../../../../../src/assets/icons/lista.svg");
   position: absolute;
   top: 28px;
   left: -24px;
