--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@
 }
 
 .container {
-  max-width: 1216px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 128px 24px;
   overflow: hidden;
@@ -455,7 +455,7 @@
 }
 
 .logo {
-  max-width: 64px;
+  max-width: 132px;
   min-width: 48px;
 }
 
@@ -1578,6 +1578,33 @@ body::-webkit-scrollbar-thumb {
 svg,
 img {
   width: 100%;
+}
+
+header {
+  background-color: #000000;
+  padding: 32px 16px;
+}
+
+nav {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+nav .menu {
+  list-style: none;
+  gap: 40px;
+}
+nav .menu a {
+  color: #ffffff;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  line-height: 150%;
+  font-weight: 100;
+}
+@media screen and (max-width: 960px) {
+  nav {
+    justify-content: center !important;
+    gap: 32px;
+  }
 }
 
 .icon {
