Update: Section Hero

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -359,3 +359,27 @@ $gutter: 32px;
 
   background-color: rgba(27, 105, 210, 0.2);
 }
+
+.bg-black-dark {
+  background-color: $black-dark;
+}
+
+.shaddow-white {
+  box-shadow: inset 0 -80px $white-light;
+
+  @include responsive(s) {
+    box-shadow: none;
+  }
+}
+
+// Section Hero
+.hero {
+  @include responsive(s) {
+    flex-direction: column;
+    text-align: center;
+
+    .img-hero {
+      display: none;
+    }
+  }
+}
