--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 }
 
 .color-gray {
-  color: #717274;
+  color: #b2b2b2;
 }
 
 .color-red {
@@ -512,6 +512,29 @@
   border: 2px solid #E4A30B;
   border-radius: 4px;
   background-color: rgba(27, 105, 210, 0.2);
+}
+
+.bg-black-dark {
+  background-color: #000000;
+}
+
+.shaddow-white {
+  box-shadow: inset 0 -80px #ffffff;
+}
+@media screen and (max-width: 960px) {
+  .shaddow-white {
+    box-shadow: none;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .hero {
+    flex-direction: column;
+    text-align: center;
+  }
+  .hero .img-hero {
+    display: none;
+  }
 }
 
 .s-0 {
@@ -1703,6 +1726,7 @@ option {
   font-size: 16px;
   line-height: 26px;
   font-weight: 200;
+  font-weight: bold;
   cursor: pointer;
   transition: 0.3s ease;
 }
