--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
 }
 
 .color-white {
-  color: #e8ebf0;
+  color: #ffffff !important;
+}
+
+.color-black {
+  color: #2E2E2E !important;
 }
 
 .color-primary {
@@ -277,7 +281,7 @@
 }
 
 .container {
-  max-width: 1440px;
+  max-width: 1216px;
   margin: 0 auto;
   padding: 128px 24px;
   overflow: hidden;
@@ -535,6 +539,17 @@
   .hero .img-hero {
     display: none;
   }
+}
+
+.card-bike h4::after {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 8px;
+  transform: translate(-50%, -50%);
+  top: 20px;
+  left: -18px;
+  background-color: #FFBB00;
 }
 
 .s-0 {
@@ -1205,7 +1220,7 @@ h1 {
   color: #d8dbe3;
   z-index: 5;
   font-family: "Poppins", sans-serif;
-  font-size: 80px;
+  font-size: 72px;
   line-height: 100%;
   font-weight: 500;
 }
@@ -1277,7 +1292,7 @@ h3 {
 h4 {
   color: #d8dbe3;
   font-family: "Poppins", sans-serif;
-  font-size: 36px;
+  font-size: 32px;
   line-height: 120%;
   font-weight: 300;
 }
@@ -1483,7 +1498,7 @@ span {
   letter-spacing: 1px;
   text-transform: none;
   font-family: "Poppins", sans-serif;
-  font-size: 80px;
+  font-size: 72px;
   line-height: 100%;
   font-weight: 500;
 }
@@ -1609,7 +1624,7 @@ header {
 }
 
 nav {
-  max-width: 1440px;
+  max-width: 1216px;
   margin: 0 auto;
 }
 nav .menu {
