--- a/css/sass/_colors.scss
+++ b/css/sass/_colors.scss
@@ -47,7 +47,7 @@ $yellow-light: #ffd76b;
 }
 
 .color-primary {
-  color: $primary-light;
+  color: $primary-light !important;
 }
 
 .color-gradient {
