--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,10 @@
   width: 25%;
 }
 
+.bb-white {
+  border-bottom: 1px solid #e8ebf0;
+}
+
 .bb-black {
   border-bottom: 1px solid #2E2E2E;
 }
@@ -522,6 +526,10 @@
   background-color: #000000;
 }
 
+.bg-black-dark-soft {
+  background-color: #111111;
+}
+
 .shaddow-white {
   box-shadow: inset 0 -80px #ffffff;
 }
@@ -585,6 +593,61 @@
 @media screen and (max-width: 960px) {
   .tecnologia-info {
     flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .parceiros h1 {
+    text-align: center;
+  }
+}
+
+.fix-line {
+  position: relative;
+}
+.fix-line ::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 50%;
+  background-color: #e8ebf0;
+}
+
+.parceiros-grid {
+  position: relative;
+}
+.parceiros-grid img {
+  max-width: 140px;
+  height: 38px;
+}
+.parceiros-grid::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 25%;
+  background-color: #e8ebf0;
+}
+.parceiros-grid::before {
+  content: "";
+  position: absolute;
+  width: 1px;
+  height: 100%;
+  left: 75%;
+  background-color: #e8ebf0;
+}
+@media screen and (max-width: 960px) {
+  .parceiros-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    border-bottom: none !important;
+  }
+  .parceiros-grid::after {
+    display: none;
+  }
+  .parceiros-grid::before {
+    display: none;
   }
 }
 
