--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -649,6 +649,60 @@
   .parceiros-grid::before {
     display: none;
   }
+}
+
+@media screen and (max-width: 960px) {
+  .depoimento {
+    display: none;
+  }
+}
+
+.depoimento-mobile {
+  display: none;
+  background-color: #E4A30B;
+}
+@media screen and (max-width: 960px) {
+  .depoimento-mobile {
+    display: block;
+  }
+}
+
+.depoimento-info {
+  background-color: #E4A30B;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 80px;
+  margin-bottom: 4px;
+}
+.depoimento-info h4 {
+  font-family: "Merriweather", serif;
+  width: 55%;
+  position: relative;
+}
+.depoimento-info h4::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 35px;
+  position: absolute;
+  top: -15px;
+  left: -40px;
+  background-image: url("../../svg/aspas-left.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.depoimento-info h4::before {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 35px;
+  position: absolute;
+  bottom: -15px;
+  right: -15px;
+  background-image: url("../../svg/aspas-right.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .s-0 {
@@ -1640,6 +1694,10 @@ b {
 
 .text-right {
   text-align: right;
+}
+
+.text-just {
+  text-align: justify;
 }
 
 .h-xl {
