Update: Section Seguros

--- a/css/sass/_layout.scss
+++ b/css/sass/_layout.scss
@@ -591,3 +591,43 @@ $gutter: 32px;
     }
   }
 }
+
+// Section Seguros
+.seguros-card {
+  padding: 32px 32px 32px 64px;
+  border: 0;
+  border-radius: 4px;
+
+  .seguros-title {
+    @include responsive(s) {
+      justify-content: center;
+
+      h3, blockquote {
+        text-align: center;
+      }
+    }
+  }
+
+  .seguros-beneficios li {
+    list-style: none;
+    position: relative;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+
+      width: 13px;
+      height: 9px;
+
+      background-image: url("../../svg/lista.svg");
+      background-repeat: no-repeat;
+      background-size: cover;
+
+      transform: translate(-50%, -50%);
+
+      top: 15px;
+      left: -15px;
+    }
+  }
+}
