--- a/css/sass/_buttons.scss
+++ b/css/sass/_buttons.scss
@@ -64,6 +64,27 @@ option {
   }
 }
 
+.btn-2 {
+  display: inline-block;
+  padding: 16px 32px;
+
+  // use cores desejada...
+  color: #fff;
+  background: #2E2E2E !important;
+
+  border-radius: 4px;
+  border: 0;
+
+  @include typeface-2(p3, desktop);
+
+  cursor: pointer;
+
+  transition: 0.3s ease;
+  &:hover {
+    opacity: 0.7; // aplicar opacidade
+  }
+}
+
 .link {
   cursor: pointer;
 
