--- a/css/style.css
+++ b/css/style.css
@@ -422,6 +422,10 @@
   width: 25%;
 }
 
+.bb-black-soft {
+  border-bottom: 1px solid #111;
+}
+
 .bb-white {
   border-bottom: 1px solid #e8ebf0;
 }
