--- a/css/style.scss
+++ b/css/style.scss
@@ -53,6 +53,7 @@ img {
 
 @import "sass/menu";
 @import "sass/bikes";
+@import "sass/bikeInternal";
 @import "sass/icons";
 @import "sass/buttons";
 @import "sass/footer";
